--- a/css/origamispa2.css
+++ b/css/origamispa2.css
@@ -90,6 +90,10 @@ body::-webkit-scrollbar-thumb {
 
 }
 
+.services img {
+    
+}
+
 
 @media (min-width: 768px) and (max-width: 991px) {
     /* Show 4th slide on md if col-md-4*/
