--- a/css/origamispa2.css
+++ b/css/origamispa2.css
@@ -91,7 +91,10 @@ body::-webkit-scrollbar-thumb {
 }
 
 .services img {
-    
+    width: 70%;
+    border-radius: 50%;
+    padding:15px;
+    border: 3px solid #FF8870;
 }
 
 
