--- a/css/origamispa2.css
+++ b/css/origamispa2.css
@@ -97,6 +97,13 @@ body::-webkit-scrollbar-thumb {
     border: 3px solid #FF8870;
 }
 
+/* On screens that are 600px or less */
+@media screen and (max-width: 600px) {
+    .services img {
+      width: 100%;
+    }
+  }
+
 
 @media (min-width: 768px) and (max-width: 991px) {
     /* Show 4th slide on md if col-md-4*/
