--- a/css/origamispa2.css
+++ b/css/origamispa2.css
@@ -91,10 +91,16 @@ body::-webkit-scrollbar-thumb {
 }
 
 .services img {
-    width: 70%;
+    max-width: 100px;
+    max-height: 100px;
     border-radius: 50%;
     padding:15px;
-    border: 3px solid #FF8870;
+    border: 2px solid #FF8870;
+}
+
+.our-service1 {
+    height: 112px;
+    width: 100px;
 }
 
 /* On screens that are 600px or less */
