--- a/css/origamispa2.css
+++ b/css/origamispa2.css
@@ -115,7 +115,19 @@ body::-webkit-scrollbar-thumb {
     margin-right: 10px; 
 }
 
+.card-body {
+    padding: .3rem;
+}
 
+.card-title {
+    margin-bottom: 0rem;
+}
+
+.product-section {
+    min-height: 400px;
+    background: rgba(1, 112, 113, 0.05);
+
+}
 
 
 @media (min-width: 768px) and (max-width: 991px) {
