--- a/css/origamispa2.css
+++ b/css/origamispa2.css
@@ -107,6 +107,11 @@ body::-webkit-scrollbar-thumb {
     .services img {
       width: 100%;
     }
+
+    
+    p.card-title{
+        font-size:10px;
+    }
   }
 
 .services-icons {
