--- a/css/origamispa2.css
+++ b/css/origamispa2.css
@@ -109,13 +109,17 @@ body::-webkit-scrollbar-thumb {
     }
 
     p.card-title{
-        font-size:12px;
+        font-size:11px;
     }
   }
 
 .services-icons {
     margin-left: 10px;
     margin-right: 10px; 
+}
+
+.spa .col-3 {
+    padding: 5px;
 }
 
 .card-body {
