--- a/css/origamispa2.css
+++ b/css/origamispa2.css
@@ -167,6 +167,10 @@ body::-webkit-scrollbar-thumb {
 
 }
 
+.product-icons img {
+    margin-bottom: 2rem;
+}
+
 
 
 @media (min-width: 768px) and (max-width: 991px) {
