--- a/css/origamispa2.css
+++ b/css/origamispa2.css
@@ -178,6 +178,12 @@ body::-webkit-scrollbar-thumb {
     width: 70%;
 }
 
+.blog-section {
+    padding-bottom: 3rem;
+    padding-top: 3rem;
+
+}
+
 
 
 @media (min-width: 768px) and (max-width: 991px) {
