--- a/css/origamispa2.css
+++ b/css/origamispa2.css
@@ -184,6 +184,12 @@ body::-webkit-scrollbar-thumb {
 
 }
 
+.blog-section .card-title {
+    text-align: center;
+        font-weight: 600;
+        font-size: 15px;
+}
+
 
 
 @media (min-width: 768px) and (max-width: 991px) {
